# nonbiri-extensions-dev

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  .gitmodules  CMakeLists.txt  DEVELOPMENT.md  build.bat  build.sh  index  index.db  index.sql  linux.json  windows.json
.github/workflows/: build-extensions.yml  build-indexer.yml  build.yml  linux.yml  windows.yml
cmake/: HunterGate.cmake  extension.cmake  toolchain.cmake
cmake/Hunter/: config.cmake
extensions/all/mangadex/: CMakeLists.txt  constants.h  mangadex.cpp  mangadex.h  models.cpp  models.h
extensions/ehentai/: CMakeLists.txt  constants.h  ehentai.cpp  ehentai.h  models.cpp  models.h
extensions/en/koushoku/: CMakeLists.txt  koushoku.cpp  koushoku.h
extensions/exhentai/: CMakeLists.txt
extensions/koushoku/: CMakeLists.txt  koushoku.cpp  koushoku.h
extensions/mangadex/: CMakeLists.txt  constants.h  mangadex.cpp  mangadex.h  models.cpp  models.h  utility.cpp  utility.h
index/: database.cpp  database.h  extension.h  main.cpp  schema.sql  utility.cpp  utility.h
